Add support for exchange APIs
