# impala-bridge/src/handlers/mod.rs
@@ -5,6 +5,8 @@ pub mod authenticate;
 pub mod card;
 pub mod card_auth;
 pub mod device_token;
+pub mod exchange;
+pub mod exchange_webhook;
 pub mod github;
 pub mod google;
 pub mod health;
